breaking up fetching data and displaying to DOM

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
 <body>
     <header>
         <h1>Spacestagram</h1>
+        <p>Brought to you by NASA's Mars Rover Photos API</p>
     </header>
     <main>
-        
     </main>
 </body>
 </html>
