adding hover state to buttons

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>Spacestagram</h1>
-        <p>Data from NASA's Mars Rover Photos API</p>
+        <p>Content from NASA's Mars Rover Photos API</p>
     </header>
     <main>
     </main>
