--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Spacestagram</title>
     <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
-    <script type="module" src="js/index.js" defer></script>
+    <script src="js/index.js" defer></script>
 </head>
 <body>
     <header>
