adjusting files and changing max width

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Richelle Kaiser build for liking and sharing space photos">
     <title>Spacestagram</title>
     <link rel="manifest" href="site.webmanifest">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="src/css/styles.css">
     <script src="js/index.js" defer></script>
 </head>
 <body>
